<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/topLayout" android:background="@drawable/bg2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@id/titlel" android:background="#b4000000" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:minHeight="54.0dip">
        <TextView android:textSize="30.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_title_top" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/linerLevels" android:background="#8cffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/titlel">
        <TextView android:textSize="20.0dip" android:textColor="#ff000000" android:id="@id/tx2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="SELECT LEVEL" android:layout_centerHorizontal="true" />
        <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tx2" layout="@layout/module_menu_level_wild" />
    </RelativeLayout>
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="55.0dip" android:layout_marginBottom="18.0dip" android:weightSum="2.0" android:layout_above="@id/container_promo">
        <RelativeLayout android:id="@id/button_points" android:layout_width="0.0dip" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:layout_weight="1.0">
            <FrameLayout android:id="@id/points_container" android:background="@drawable/xml_button_point_vert" android:clickable="true" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_centerVertical="true" android:onClick="checkin_Clicked">
                <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="13.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/points_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
                    <TextView android:textSize="13.0dip" android:textStyle="bold" android:textColor="#fffcba03" android:id="@id/points_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=" GP" />
                </LinearLayout>
            </FrameLayout>
            <ImageView android:id="@id/points_alert" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="2.0dip" android:src="@drawable/icon_premium_analysis_last" android:layout_alignParentLeft="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/button_pack_level" android:layout_width="0.0dip" android:layout_height="55.0dip" android:layout_marginRight="10.0dip" android:layout_weight="1.0">
            <Button android:textSize="15.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@id/button_pack" android:background="@drawable/xml_button_pack" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="10.0dip" android:text="@string/pack2_title_top" android:soundEffectsEnabled="false" android:onClick="packClicked" />
            <ImageView android:id="@id/iconPack" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/icon_pack" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/iconLock" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginLeft="17.0dip" android:src="@drawable/icon_lock_pack" android:layout_alignParentLeft="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/container_promo" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_above="@id/btns">
        <LinearLayout android:orientation="horizontal" android:id="@id/promLaz" android:background="@drawable/xml_button_promo_vert" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:onClick="promClicked">
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/checkers_icon" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="7.5dip" android:layout_marginRight="7.5dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
                <TextView android:textSize="20.0dip" android:textColor="#ff000000" android:id="@id/promTextTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/promTextTitle" />
                <TextView android:textSize="10.0dip" android:textColor="#ff000000" android:id="@id/promText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/promText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/promLaz_Prem" android:background="@drawable/xml_button_promo_vert_prem" android:visibility="visible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="8.0dip" android:onClick="prom_Prem_Clicked">
            <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/premium" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="7.5dip" android:layout_marginRight="7.5dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip">
                <TextView android:textSize="20.0dip" android:textColor="#fffcba03" android:id="@id/promTextTitle_Prem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="0.0dip" android:text="@string/menu_title_top_premium" />
                <TextView android:textSize="10.0dip" android:textColor="#ffffffff" android:id="@id/promText_Prem" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/promText_Prem" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/btns" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0" android:layout_alignParentBottom="true" android:layout_centerVertical="true">
        <Button android:textSize="30.0dip" android:textColor="#ffffffff" android:id="@id/button_play" android:background="@drawable/xml_button_play" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/menu_button_play" android:layout_weight="1.0" android:soundEffectsEnabled="false" android:onClick="playClicked" />
        <Button android:textSize="12.0dip" android:textColor="#ffffffff" android:id="@id/button_set" android:background="@drawable/xml_button_settings" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/menu_button_settings" android:layout_weight="2.0" android:soundEffectsEnabled="false" android:onClick="setClicked" />
    </LinearLayout>
    <include android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/module_menu_wait_consent" />
</RelativeLayout>